# amp-rack

./: .gitignore  README.md  build.gradle  mybuild  plugins.txt  settings.gradle
app/: build.gradle
app/amp/: build.gradle
app/amp/src/main/: AndroidManifest.xml
app/amp/src/main/cpp/: CMakeLists.txt  amp.cpp  util.h
app/crybabyx/: build.gradle
app/crybabyx/src/main/: AndroidManifest.xml
app/crybabyx/src/main/cpp/: CMakeLists.txt  crybabyx.cpp
app/distortionx/: build.gradle
app/distortionx/src/main/: AndroidManifest.xml
app/distortionx/src/main/cpp/: CMakeLists.txt  distortionx.cpp
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: all_plugins.json  amps.json  blacklist.json  connect.json  creator.json  knobs.json  lv2_map.json  lv2_plugins.json  material_colors.json  plugins.json  plugins_info.json  styles.json
app/src/main/assets/drumkits/default/: drumkit.xml
app/src/main/assets/lv2/bentdelay.so/: bentdelay.json
app/src/main/assets/lv2/casynth.so/: casynth:preset:01RawSaw.json  casynth_preset_09Jangley.json
app/src/main/assets/lv2/cheapdist.so/: cheapdist.json
app/src/main/assets/lv2/envfollower.so/: envfollower_group_ctl.json
app/src/main/assets/lv2/ewham.so/: ewham.json
app/src/main/assets/lv2/hip2b.so/: hip2b:preset:00crackle.json  hip2b:preset:02glitchy_octave.json
app/src/main/assets/lv2/libCollisionDrive.so/: CollisionDrive.json  CollisionDrive.ttl
app/src/main/assets/lv2/libFatFrog.lv2.so/: FatFrog.ttl  _FatFrog_.json
app/src/main/assets/lv2/libGx4BandEQ.lv2.so/: _equalizer_.json  gx_equalizer.ttl
app/src/main/assets/lv2/libGxAxisFace.lv2.so/: _AxisFace_.json  gx_AxisFace.ttl
app/src/main/assets/lv2/libGxBaJaTubeDriver.lv2.so/: _bajatubedriver_.json  gx_bajatubedriver.ttl
app/src/main/assets/lv2/libGxBlueAmp.lv2.so/: _blueamp_.json  gx_blueamp.ttl
app/src/main/assets/lv2/libGxBoobTube.lv2.so/: _boobtube_.json  gx_boobtube.ttl
app/src/main/assets/lv2/libGxBottleRocket.lv2.so/: _bottlerocket_.json  gx_bottlerocket.ttl
app/src/main/assets/lv2/libGxCabSim.lv2.so/: _cabsim_.json  gx_cabsim.ttl
app/src/main/assets/lv2/libGxClubDrive.lv2.so/: _clubdrive_.json  gx_clubdrive.ttl
app/src/main/assets/rdf/: caps.rdf  inv_plugins.rdf
app/src/main/cpp/: AudioBuffer.h  CMakeLists.txt  Engine.cpp  Engine.h  Export.cpp  Export.h  FileWriter.cpp  FileWriter.h  FullDuplexPass.h  FullDuplexStream.cpp  FullDuplexStream.h  LV2Features.h  LockFreeQueue.cpp  LockFreeQueue.h  MP4.cpp  MP4.h  Meter.cpp  Meter.h  OpusWorkaround.cpp  OpusWorkaround.h  Plugin.cpp  Plugin.h  Plugin2.cpp  Plugin2.h  PluginControl.cpp  PluginControl.h  SharedLibrary.cpp  SharedLibrary.h  android_main.cpp  atom.cpp  atom.h  atomic.h  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  camera_utils.cpp  camera_utils.h  image_reader.cpp  (+16 more)
app/src/main/cpp/lilv/: lilv.h  lilvmm.hpp
app/src/main/cpp/lv2/atom/: util.h
app/src/main/cpp/lv2/log/: log.h
app/src/main/cpp/lv2/options/: options.h
app/src/main/cpp/lv2/state/: state.h
app/src/main/cpp/lv2/ui/: ui.h
app/src/main/cpp/lv2/worker/: worker.h
app/src/main/cpp/zix/: allocator.h  attributes.h  btree.h  bump_allocator.h  digest.h  environment.h  filesystem.h  hash.h  path.h  ring.h  sem.h  status.h  string_view.h  thread.h  tree.h  zix.h
app/src/main/res/color/: sector_range_color.xml  sector_value_color.xml
app/src/main/res/drawable/: almost_trans.xml  baseline_add_a_photo_24.xml  baseline_arrow_drop_down_24.xml  baseline_arrow_drop_up_24.xml  baseline_auto_graph_24.xml  baseline_bluetooth_connected_24.xml  baseline_bluetooth_searching_24.xml  baseline_blur_circular_24.xml  baseline_bolt_24.xml  baseline_ondemand_video_24.xml  baseline_settings_suggest_24.xml  baseline_tune_24.xml  baseline_warning_20.xml  baseline_warning_24.xml  baseline_warning_24_sm.xml  ic_baseline_arrow_back_ios_new_24.xml  ic_baseline_arrow_circle_up_24.xml  ic_baseline_close_24.xml  ic_baseline_delete_forever_24.xml  ic_baseline_keyboard_double_arrow_up_24.xml  ic_baseline_loupe_24.xml  ic_baseline_pause_24.xml  ic_baseline_play_arrow_24.xml  ic_baseline_speaker_24.xml  ic_baseline_upgrade_24.xml  rounded_corners_transparent.xml  semi_trans.xml  shadow.xml
app/src/main/res/font/: comfortaa.xml
app/src/main/res/layout/: activity_about.xml  activity_camera.xml  activity_connect_guitar.xml  activity_delete_data.xml  activity_drum_machine.xml  activity_featured_videos.xml  activity_files.xml  activity_firebase_ui.xml  activity_main.xml  activity_namdownloader.xml  activity_onboard.xml  activity_presets.xml  activity_purchase.xml  activity_purchase2.xml  audio_devices_selector.xml  bug_report.xml  connect_activity.xml  connect_tips.xml  content_drum_machine.xml  content_featured_videos.xml  content_files.xml  drum_machine.xml  fragment_main.xml  hash_commands.xml  latency_tuner.xml  load_plugin_dialog.xml  main_fragment.xml  media_player_dialog.xml  midi_add_control.xml  midi_select.xml  my_preset.xml  my_presets.xml  my_presets_layout.xml  plugin_dialog_entry.xml  plugin_ui.xml  presets_library.xml  rack.xml  save_preset_dialog.xml  settings_activity.xml  sync_dialog.xml  (+3 more)
app/src/main/res/menu/: bottom.xml  midi.xml  options_menu.xml  sort_by.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph2.xml  nav_graph3.xml
app/src/main/res/values/: RotarySeekbar_DefaultMaterialStyle.xml  arrays.xml  attrs.xml  colors.xml  ic_launcher_background.xml  preloaded_fonts.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: account_pref.xml  camera_settings.xml  filepaths.xml  header_preferences.xml  messages_preferences.xml  sync_preferences.xml  theme_settings.xml  tracks_settings.xml  version_info.xml
app/tubex/: build.gradle
app/tubex/src/main/: AndroidManifest.xml
app/tubex/src/main/cpp/: CMakeLists.txt  tap_utils.h  tubex.cpp
docs/: CNAME  _config.yml  connect.md  faq.md  faqs.md  index.md  privacy.md
gradle/wrapper/: gradle-wrapper.properties
(+515 files in other folders)
